# mcu-snippets

./: .gitignore  .gitmodules  10-tiva.rules  setup.sh
3_mag_encoder_read/: main.c
Arm_Control/: main.c
Arm_Controller/: .ccsproject  .cproject  .project  arm_controller.h  configuration.c  loop_tests.c  main.c  motor_run.c  motor_stop.c  sensor_readings.c
Arm_Controller/.launches/: Arm_Controller.launch
Arm_Controller/Debug/: Arm_Controller.map  Arm_Controller.out  Arm_Controller_linkInfo.xml  ccsObjs.opt  configuration.d  loop_tests.d  main.d  makefile  motor_run.d  sensor_readings.d  subdir_rules.mk  subdir_vars.mk  tm4c123gh6pm_startup_ccs.d
Quadrature_Encoder_Reading/: .cproject  .project  main.c
Quadrature_Encoder_Reading/.launches/: Quadrature_Encoder_Reading.launch
Quadrature_Encoder_Reading/Debug/: Quadrature_Encoder_Reading.map  Quadrature_Encoder_Reading.out  Quadrature_Encoder_Reading_linkInfo.xml  main.d  makefile
Quadrature_encoder_CUI/: .cproject  .project  main.c
Quadrature_encoder_CUI/.launches/: Quadrature_encoder_CUI.launch
drive_motor_spi/: main.c
encoder_ros_node/: encoder_ros_node.ino
lidar_mount/: lidar_mount.ino
magnetic_encoder_reading/: main.c
pololu_motor_run/: .cproject  .project  main.c
pololu_pwmInput_motor_control/: .cproject  .project  main.c
pwm/: .cproject  .project  main.c
sample_motor_control_library/: README.md  bdc_motor.c  bdc_motor.h  main.c
scripts/: simple_publisher.py
tiva_test/catkin_ws/src/arm/: CMakeLists.txt
tiva_test/catkin_ws/src/arm/arm_main/: CMakeLists.txt  arm_main.cpp
(+295 files in other folders)
